// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BuyerSettings Store can fetch data from brands endpoint 1`] = `Array []`;

exports[`BuyerSettings Store can fetch data from categories endpoint 1`] = `
Array [
  Object {
    "avatarImage": Object {
      "id": "82c8a744-10c6-48c9-b5a0-3a90de6d2c2f",
      "largeUrl": "https://wm-exchange-assets-acceptance.s3.amazonaws.com/categories/images/concentrates.png",
      "mediumUrl": "https://wm-exchange-assets-acceptance.s3.amazonaws.com/categories/images/concentrates.png",
      "smallUrl": "https://wm-exchange-assets-acceptance.s3.amazonaws.com/categories/images/concentrates.png",
    },
    "categories": Array [
      Object {
        "id": "c922a456-146e-4293-955b-bb517d3063ac",
        "name": "Sauce",
        "slug": "sauce",
      },
      Object {
        "id": "b7295924-975c-4e0c-bb18-250d4b233a35",
        "name": "Live Resin",
        "slug": "live-resin",
      },
      Object {
        "id": "2e6d3214-fac6-45a8-9786-6dbda76a6a33",
        "name": "Hash Oil",
        "slug": "hash-oil",
      },
      Object {
        "id": "89af476a-0f1e-4158-9781-ac3109f3c96c",
        "name": "Solventless",
        "slug": "solventless",
      },
      Object {
        "id": "0128b3c7-54d6-4b27-812d-718fc8ab4b4a",
        "name": "Ice Hash",
        "slug": "ice-hash",
      },
      Object {
        "id": "68ea1a1c-9a5c-44a8-b97e-daceb020c284",
        "name": "Dry Sift",
        "slug": "dry-sift",
      },
      Object {
        "id": "5e9573a9-a0b2-4b7e-b345-ce750ba62a41",
        "name": "Apparel",
        "slug": "apparel",
      },
      Object {
        "id": "bfae7a36-f12f-4faf-9a63-1d4e9b60d9be",
        "name": "Rosin",
        "slug": "rosin",
      },
      Object {
        "id": "20eef949-8169-4a80-a80e-8482a393e29d",
        "name": "Shatter",
        "slug": "shatter",
      },
      Object {
        "id": "934e604b-7ce6-4545-a61d-c44c32072a44",
        "name": "Distillate",
        "slug": "distillate",
      },
      Object {
        "id": "335bc5dd-15b1-4be8-8595-17cc1df3e853",
        "name": "Crumble",
        "slug": "crumble",
      },
      Object {
        "id": "6c56279f-be48-44be-8a53-8fb8303e154c",
        "name": "Budder",
        "slug": "budder",
      },
    ],
    "iconImage": Object {
      "id": "c77396fe-4293-4911-805c-2cd3afb18949",
      "largeUrl": "https://wm-exchange-assets-acceptance.s3.amazonaws.com/categories/icons/concentrates.svg",
      "mediumUrl": "https://wm-exchange-assets-acceptance.s3.amazonaws.com/categories/icons/concentrates.svg",
      "smallUrl": "https://wm-exchange-assets-acceptance.s3.amazonaws.com/categories/icons/concentrates.svg",
    },
    "id": "81ac71b1-1c0c-490e-ad8a-062a6a1ae9a6",
    "name": "Concentrates",
    "position": 1,
    "slug": "concentrates",
  },
  Object {
    "avatarImage": Object {
      "id": "97cc29eb-0ce4-4b55-81ae-e1899b6dc7ce",
      "largeUrl": "https://wm-exchange-assets-acceptance.s3.amazonaws.com/categories/images/edibles.png",
      "mediumUrl": "https://wm-exchange-assets-acceptance.s3.amazonaws.com/categories/images/edibles.png",
      "smallUrl": "https://wm-exchange-assets-acceptance.s3.amazonaws.com/categories/images/edibles.png",
    },
    "categories": Array [
      Object {
        "id": "963d5e18-0feb-4263-9bd4-2ebd1e35693b",
        "name": "Beverages",
        "slug": "beverages",
      },
      Object {
        "id": "f245a838-fd25-4c7d-af45-e989c6702304",
        "name": "Munchies",
        "slug": "munchies",
      },
      Object {
        "id": "bf045477-c46d-4f12-b1bf-94f0f04e7f33",
        "name": "Baked Goods",
        "slug": "baked-goods",
      },
      Object {
        "id": "1e9b1182-59e6-4b9a-92ae-2c731a517409",
        "name": "Candies",
        "slug": "candies",
      },
      Object {
        "id": "95f27620-bc0f-421f-8d6f-d0e6abb1ec4c",
        "name": "Cooking Ingredients",
        "slug": "cooking-ingredients",
      },
      Object {
        "id": "af3eeab3-26f9-425b-99b5-fa70021e0d45",
        "name": "Gummies",
        "slug": "gummies",
      },
      Object {
        "id": "330979e6-bacf-42e0-adbd-bf623c590a7a",
        "name": "Chocolate",
        "slug": "chocolate",
      },
    ],
    "iconImage": Object {
      "id": "b252a9f9-f06e-4981-80db-cf74d6c7573a",
      "largeUrl": "https://wm-exchange-assets-acceptance.s3.amazonaws.com/categories/icons/edibles.svg",
      "mediumUrl": "https://wm-exchange-assets-acceptance.s3.amazonaws.com/categories/icons/edibles.svg",
      "smallUrl": "https://wm-exchange-assets-acceptance.s3.amazonaws.com/categories/icons/edibles.svg",
    },
    "id": "e306a27d-5076-4074-ab7a-21f6485ad4bb",
    "name": "Edibles",
    "position": 3,
    "slug": "edibles",
  },
]
`;

exports[`BuyerSettings Store can fetch data from locations endpoint 1`] = `
Array [
  Object {
    "active": true,
    "address": Object {
      "city": "Irvine",
      "country": "US",
      "id": "b393b3e0-0814-4352-aa63-95a4d07fe1af",
      "latitude": 33.6618199,
      "longitude": -117.7597545,
      "postalCode": "92618",
      "streetAddress": "55 Discovery",
      "territory": "CA",
    },
    "contactName": "Andre Smithh",
    "deliveryInstructions": "TEST.",
    "email": "asciametta@aol.com",
    "id": "6039ad85-7be7-45ce-a5f9-3e802eeba1e5",
    "licenses": Array [
      Object {
        "id": "e5ae232c-9ae7-4e81-b6f6-67bd5562706f",
        "licenseType": "medical",
        "number": "THX1138",
      },
    ],
    "name": "Andrew's Cryb",
    "phoneNumber": "(303) 555-5555",
    "source": "weedmaps",
  },
  Object {
    "active": false,
    "address": Object {
      "city": "Irvine",
      "country": "US",
      "id": "3cdf8df1-4a9d-43cc-9aac-2548eb08dc58",
      "latitude": 33.66517839999999,
      "longitude": -117.756439,
      "postalCode": "92618",
      "streetAddress": "44 Discovery",
      "territory": "CA",
    },
    "contactName": "Joe Smith",
    "deliveryInstructions": "Knock four times.",
    "email": "joesmith@aol.com",
    "id": "7f98075f-a924-4606-a817-b6f99a61f289",
    "licenses": Array [
      Object {
        "id": "6a102cdd-e21b-46ef-b4e7-55cfcb6e3bcb",
        "licenseType": "medical",
        "number": "THX1138",
      },
    ],
    "name": "Test Location",
    "phoneNumber": "(303) 555-5555",
    "source": "exchange",
  },
]
`;

exports[`BuyerSettings Store should return availabilities 1`] = `
Array [
  Object {
    "id": "inStock",
    "name": "In Stock",
  },
  Object {
    "id": "outOfStock",
    "name": "Out of Stock",
  },
]
`;

exports[`BuyerSettings Store should transform departments data 1`] = `
Array [
  Object {
    "avatarImageUrl": "https://wm-exchange-assets-acceptance.s3.amazonaws.com/categories/images/concentrates.png",
    "categories": Array [
      Object {
        "id": "c922a456-146e-4293-955b-bb517d3063ac",
        "name": "Sauce",
        "slug": "sauce",
      },
      Object {
        "id": "b7295924-975c-4e0c-bb18-250d4b233a35",
        "name": "Live Resin",
        "slug": "live-resin",
      },
      Object {
        "id": "2e6d3214-fac6-45a8-9786-6dbda76a6a33",
        "name": "Hash Oil",
        "slug": "hash-oil",
      },
      Object {
        "id": "89af476a-0f1e-4158-9781-ac3109f3c96c",
        "name": "Solventless",
        "slug": "solventless",
      },
      Object {
        "id": "0128b3c7-54d6-4b27-812d-718fc8ab4b4a",
        "name": "Ice Hash",
        "slug": "ice-hash",
      },
      Object {
        "id": "68ea1a1c-9a5c-44a8-b97e-daceb020c284",
        "name": "Dry Sift",
        "slug": "dry-sift",
      },
      Object {
        "id": "5e9573a9-a0b2-4b7e-b345-ce750ba62a41",
        "name": "Apparel",
        "slug": "apparel",
      },
      Object {
        "id": "bfae7a36-f12f-4faf-9a63-1d4e9b60d9be",
        "name": "Rosin",
        "slug": "rosin",
      },
      Object {
        "id": "20eef949-8169-4a80-a80e-8482a393e29d",
        "name": "Shatter",
        "slug": "shatter",
      },
      Object {
        "id": "934e604b-7ce6-4545-a61d-c44c32072a44",
        "name": "Distillate",
        "slug": "distillate",
      },
      Object {
        "id": "335bc5dd-15b1-4be8-8595-17cc1df3e853",
        "name": "Crumble",
        "slug": "crumble",
      },
      Object {
        "id": "6c56279f-be48-44be-8a53-8fb8303e154c",
        "name": "Budder",
        "slug": "budder",
      },
    ],
    "iconImageUrl": "https://wm-exchange-assets-acceptance.s3.amazonaws.com/categories/icons/concentrates.svg",
    "id": "81ac71b1-1c0c-490e-ad8a-062a6a1ae9a6",
    "name": "Concentrates",
  },
  Object {
    "avatarImageUrl": "https://wm-exchange-assets-acceptance.s3.amazonaws.com/categories/images/edibles.png",
    "categories": Array [
      Object {
        "id": "963d5e18-0feb-4263-9bd4-2ebd1e35693b",
        "name": "Beverages",
        "slug": "beverages",
      },
      Object {
        "id": "f245a838-fd25-4c7d-af45-e989c6702304",
        "name": "Munchies",
        "slug": "munchies",
      },
      Object {
        "id": "bf045477-c46d-4f12-b1bf-94f0f04e7f33",
        "name": "Baked Goods",
        "slug": "baked-goods",
      },
      Object {
        "id": "1e9b1182-59e6-4b9a-92ae-2c731a517409",
        "name": "Candies",
        "slug": "candies",
      },
      Object {
        "id": "95f27620-bc0f-421f-8d6f-d0e6abb1ec4c",
        "name": "Cooking Ingredients",
        "slug": "cooking-ingredients",
      },
      Object {
        "id": "af3eeab3-26f9-425b-99b5-fa70021e0d45",
        "name": "Gummies",
        "slug": "gummies",
      },
      Object {
        "id": "330979e6-bacf-42e0-adbd-bf623c590a7a",
        "name": "Chocolate",
        "slug": "chocolate",
      },
    ],
    "iconImageUrl": "https://wm-exchange-assets-acceptance.s3.amazonaws.com/categories/icons/edibles.svg",
    "id": "e306a27d-5076-4074-ab7a-21f6485ad4bb",
    "name": "Edibles",
  },
]
`;
